features: - getByBrand method
