# api-docs.yaml
@@ -88,6 +88,12 @@ paths:
       tags:
       - device-controller
       operationId: findAll
+      parameters:
+      - name: brandName
+        in: query
+        required: false
+        schema:
+          type: string
       responses:
         "200":
           description: OK
